# rsp

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  makefile  pyproject.toml  test.ipynb
notebooks/: test_generated_images.ipynb
results/anycost/: google-ddpm-ema-celebahq-256steps10-hspace-before-etas1-idxsize10.safetensors  google-ddpm-ema-celebahq-256steps100-hspace-after-etasNone-idxsize10000.safetensors
results/diagrams/: py-feat-pipeline.d2
results/final_results/AU04/: au_predictions.csv
results/final_results/AU04/dataframes/: au_predictions.csv
results/final_results/AU12/: au_predictions.csv
results/final_results/AU12/dataframes/: au_predictions.csv
results/final_results/Original/dataframes/: au_predictions.csv
src/notebooks/: analyze.ipynb  convergence_viz.ipynb
src/rsp/: __init__.py  constants.py  dataset.py  diffusion.py  interpolation.py  loading.py  log_utils.py  main.py  semanticdiffusion.py  stateclass.py  unet.py  utils.py
src/rsp/editing/: __init__.py  anycost.py  direction_plotting.py  predictor.py
src/scripts/: au_differences.py  au_distributions.py  au_editing.py  au_editing_vizualisation.py  convergence_explorer.py  diffuse.py  disentangle_aus.py  final_results.py  final_results_analyzer.py  generated_AU_dist.py  get_all_au_directions.py  get_au_correlations.py  get_au_directions.py  pyfeat.py  pyfeat_save_first.py  setup_env.py  setup_remote.py
testphotocase/: test.ipynb
