[project]
name = "Research Project"
version = "0.1.0"
description = "Editing Facial Action Units through Diffusion Model Latent Spaces"
authors = [
    { name = "Viggo Gascou", email = "viga@itu.dk" },
    { name = "Erling Amundsen", email = "erla@itu.dk" },
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers>=0.35.1",
    "gdown>=5.2.0",
    "huggingface-hub>=0.35.1",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "py-feat>=0.6.1",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
