[project]
name = "rsp"
version = "0.1.0"
description = "Editing Facial Action Units through Diffusion Model Latent Spaces"
authors = [
  { name = "Viggo Gascou", email = "viga@itu.dk" },
  { name = "Erling Amundsen", email = "erla@itu.dk" },
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
  "accelerate>=1.10.1",
  "datasets[vision]>=4.1.1",
  "diffusers>=0.35.1",
  "gdown>=5.2.0",
  "huggingface-hub>=0.35.1",
  "numpy<2",
  "opencv-python>=4.11.0.86",
  "pillow>=11.3.0",
  "py-feat",
  "python-dotenv>=1.1.1",
  "rich>=14.1.0",
  "scipy>=1.11.0,<1.12.0",
  "termcolor>=3.1.0",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "tqdm>=4.67.1",
  "transformers>=4.56.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "matplotlib>=3.10.6",
  "nbstripout>=0.8.1",
  "pre-commit>=4.3.0",
  "ruff>=0.13.2",
  "scikit-learn>=1.7.2",
  "seaborn>=0.13.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
py-feat = { git = "https://github.com/cosanlab/py-feat" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.ruff.lint]
select = [
    # isort (imports)
    "I",
    # pydocstyle (docstrings)
    "D",
    # pycodestyle errors and warnings (PEP8)
    "E",
    "W",
]
ignore = [
    # Type annotations for *args
    "ANN002",
    # Type annotations for **kwargs
    "ANN003",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]
# dont worry about docstrings in scripts
"src/scripts/*" = ["D"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"
